# SoftwareUdviklingGame

./: .gitignore  Ape.cpp  Ape.h  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  Dragon.cpp  Dragon.h  Enemies.cpp  Enemies.h  Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h  Game.h  GameData.db  GameManager.cpp  GameManager.h  Goblin.cpp  Goblin.h  Grotte.cpp  Grotte.h  Hest.cpp  Hest.h  MainCharacter.cpp  MainCharacter.h  Snake.cpp  Snake.h  Source.cpp  Unicorn.cpp  Unicorn.h  Weapons.cpp  Weapons.h  createDataBase.txt  create_tables.sql
